package homey.model.person;

import static homey.commons.util.CollectionUtil.requireAllNonNull;

import java.util.Collections;
import java.util.HashSet;
import java.util.Objects;
import java.util.Optional;
import java.util.Set;

import homey.commons.util.ToStringBuilder;
import homey.model.tag.Relation;
import homey.model.tag.Tag;
import homey.model.tag.TransactionStage;

/**
 * Represents a Person in the address book.
 * Guarantees: details are present and not null, field values are validated, immutable.
 */
public class Person {

    // Identity fields
    private final Name name;
    private final Phone phone;
    private final Email email;

    // Data fields
    private final Address address;
    private final TransactionStage stage;
    private final Relation relation;
    private final Set<Tag> tags = new HashSet<>();
    private final Optional<Meeting> meeting;
    private final boolean isArchived;
    private final Remark remark;

    /**
     * Every field must be present and not null.
     */
    public Person(Name name, Phone phone, Email email, Address address, Relation relation,
                  TransactionStage stage, Remark remark, Set<Tag> tags) {
        requireAllNonNull(name, phone, email, address, stage, tags);
        this.name = name;
        this.phone = phone;
        this.email = email;
        this.address = address;
        this.stage = stage;
        this.relation = relation;
        this.tags.addAll(tags);
        this.meeting = Optional.empty();
        this.isArchived = false;
        this.remark = remark == null ? new Remark("") : remark;
    }

    /**
     * Overloaded constructor that accepts an optional meeting.
     */
    public Person(Name name, Phone phone, Email email, Address address, Relation relation,
                  TransactionStage stage, Remark remark, Set<Tag> tags, Optional<Meeting> meeting) {
        requireAllNonNull(name, phone, email, address, stage, tags);
        this.name = name;
        this.phone = phone;
        this.email = email;
        this.address = address;
        this.stage = stage;
        this.relation = relation;
        this.tags.addAll(tags);
        this.meeting = meeting == null ? Optional.empty() : meeting;
        this.remark = remark == null ? new Remark("") : remark;
        this.isArchived = false;
    }

    /**
     * Overloaded constructor used by archived()/unarchived().
     */
    private Person(Name name, Phone phone, Email email, Address address, Relation relation,
                   TransactionStage stage, Remark remark, Set<Tag> tags, Optional<Meeting> meeting,
                   boolean isArchived) {
        requireAllNonNull(name, phone, email, address, tags);
        this.name = name;
        this.phone = phone;
        this.email = email;
        this.address = address;
        this.stage = stage;
        this.relation = relation;
        this.tags.addAll(tags);
        this.meeting = meeting == null ? Optional.empty() : meeting;
        this.isArchived = isArchived;
        this.remark = remark == null ? new Remark("") : remark;
    }

    public Name getName() {
        return name;
    }

    public Phone getPhone() {
        return phone;
    }

    public Email getEmail() {
        return email;
    }

    public Address getAddress() {
        return address;
    }

    public TransactionStage getStage() {
        return stage;
    }

    public Relation getRelation() {
        return relation;
    }

    public Optional<Meeting> getMeeting() {
        return meeting;
    }

    public Remark getRemark() {
        return remark;
    }

    /**
     * Returns true if this person has been archived.
     * Archived persons are hidden from the active contact list by default.
     *
     * @return true if this person is archived, false otherwise
     */
    public boolean isArchived() {
        return isArchived;
    }

    /**
     * Returns a new {@code Person} instance representing this person
     * but marked as archived.
     * This method preserves immutability by returning a copy.
     *
     * @return a copy of this person with archived status set to true
     */
    public Person archived() {
        return new Person(name, phone, email, address, relation, stage, remark, tags, meeting, true);
    }

    /**
     * Returns a new {@code Person} instance representing this person
     * but marked as active (not archived).
     * This method preserves immutability by returning a copy.
     *
     * @return a copy of this person with archived status set to false
     */
    public Person unarchived() {
        return new Person(name, phone, email, address, relation, stage, remark, tags, meeting, false);
    }

    /**
     * Returns an immutable tag set, which throws {@code UnsupportedOperationException}
     * if modification is attempted.
     */
    public Set<Tag> getTags() {
        return Collections.unmodifiableSet(tags);
    }

    /**
     * Returns true if both persons have the same name.
     * This defines a weaker notion of equality between two persons.
     */
    public boolean isSamePerson(Person otherPerson) {
        if (otherPerson == this) {
            return true;
        }

        return otherPerson != null
                && otherPerson.getName().equals(getName());
    }

    /**
     * Returns true if both persons have the same identity and data fields.
     * This defines a stronger notion of equality between two persons.
     */
    @Override
    public boolean equals(Object other) {
        if (other == this) {
            return true;
        }

        // instanceof handles nulls
        if (!(other instanceof Person)) {
            return false;
        }

        Person otherPerson = (Person) other;
        return name.equals(otherPerson.name)
                && phone.equals(otherPerson.phone)
                && email.equals(otherPerson.email)
                && address.equals(otherPerson.address)
                && stage.equals(otherPerson.stage)
                && tags.equals(otherPerson.tags);
    }

    @Override
    public int hashCode() {
        // use this method for custom fields hashing instead of implementing your own
        return Objects.hash(name, phone, email, address, stage, remark, tags);
    }

    @Override
    public String toString() {
        return new ToStringBuilder(this)
                .add("name", name)
                .add("phone", phone)
                .add("email", email)
                .add("address", address)
                .add("transaction stage", stage)
                .add("tags", tags)
                .toString();
    }

}
